--- a/Project2/index.html
+++ b/Project2/index.html
@@ -7,5 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="main.js"></script>
+    <button id="btn">Hit Me</button>
+    <script src="do.js"></script>
 </html>
