--- a/Assignment3/index.html
+++ b/Assignment3/index.html
@@ -16,6 +16,7 @@
         <button id="btnView">View</button>
     </form>
     <p id="result"></p>
+    <p id="factory"></p>
 
     <script src="concrete.js"></script>
     <script src="factory.js"></script>
