final exam project

--- a/Project2/index.html
+++ b/Project2/index.html
@@ -8,5 +8,5 @@
 </head>
 <body>
     <button id="btn">Hit Me</button>
-    <script src="do.js"></script>
+    <script src="arraystuff.js"></script>
 </html>
